--- a/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
+++ b/src/s2-homeworks/hw01/friend-message/FriendMessage.module.css
@@ -1,17 +1,32 @@
 .friendMessage {
-
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    max-width: 575px;
+    max-height: 77px;
+    margin: 25px auto;
 }
 
 .friendImageAndText {
-
+    display: flex;
+    justify-content: flex-start;
+    gap: 5px;
 }
 
 .friendImageAndText img {
-
+    width: 48px;
+    height: 48px;
+    border-radius: 100%;
 }
 
 .friendText {
-
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    padding: 10px;
+    background-color: #f5f7fb;
+    border-radius: 10px;
+    box-shadow: 0 1px 2px 0 rgba(29, 33, 38, 0.1), 0 5px 20px 0 rgba(29, 33, 38, 0.03);
 }
 
 .friendText:after {
@@ -19,13 +34,23 @@
 }
 
 .friendName {
-
+    font-family: Montserrat, sans-serif;
+    font-weight: 600;
+    font-size: 16px;
+    color: #000;
 }
 
 .friendMessageText {
-
+    font-family: Montserrat, sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #000;
 }
 
 .friendTime {
-
+    font-family: Montserrat, sans-serif;
+    font-weight: 600;
+    font-size: 10px;
+    color: #000;
+    padding-left: 12px;
 }
