--- a/src/s2-homeworks/hw01/message/Message.module.css
+++ b/src/s2-homeworks/hw01/message/Message.module.css
@@ -1,17 +1,33 @@
 .message {
-
+    display: flex;
+    justify-content: flex-end;
+    flex-direction: column;
+    max-width: 575px;
+    max-height: 77px;
+    margin: 25px auto;
 }
 
 .imageAndText {
-
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: row-reverse;
+    gap: 5px;
 }
 
 .imageAndText img {
-
+    width: 48px;
+    height: 48px;
+    border-radius: 100%;
 }
 
 .text {
-
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    padding: 10px;
+    background-color: #06c;
+    border-radius: 10px;
+    box-shadow: 0 1px 2px 0 rgba(29, 33, 38, 0.1), 0 5px 20px 0 rgba(29, 33, 38, 0.03);
 }
 
 .text:after {
@@ -19,13 +35,26 @@
 }
 
 .name {
-
+    font-family: Montserrat, sans-serif;
+    font-weight: 600;
+    font-size: 18px;
+    color: #fff;
+    text-align: end;
 }
 
 .messageText {
-
+    font-family: Montserrat, sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #fff;
+    text-align: end;
 }
 
 .time {
-
+    font-family: Montserrat, sans-serif;
+    font-weight: 600;
+    font-size: 10px;
+    color: #000;
+    text-align: end;
+    padding-right: 12px;
 }
