--- a/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
+++ b/src/s2-homeworks/hw04/common/c2-SuperButton/SuperButton.module.css
@@ -1,36 +1,64 @@
 .button {
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 143%;
+    border-radius: 3px;
+    padding: 5px 24px;
+    width: 132px;
+    height: 30px;
+    border: none;
+    color: #fff;
 }
 
 .disabled {
+    background-color: #004d99;
+    opacity: 0.5;
+    color: #002e5c;
 }
 
 .secondary {
+    border: 1px solid #06c;
+    width: 176px;
+    color: #06c;
 }
 
 .default {
+    background-color: #06c;
 }
 
 .red {
+    background-color: #cc1439;
 }
 
 .default:hover {
+    background-color: #0080ff;
 }
 
 .red:hover {
+    background-color: #ff1a47;
 }
 
 .secondary:hover {
+    background-color: #e5f0fa;
 }
 
 
 .default:active {
+    background-color: #0059b2;
+    color: #fff;
 }
 
 .secondary:active {
+    background-color: #c9e5ff;
+    color: #06c;
 }
 
 .red:active {
+    background-color: #b21232;
+    color: #fff;
 }
 
 .button:disabled {
+    background: #004d99;
+    opacity: 0.5;
 }
