--- a/src/s2-homeworks/hw05/header/Header.module.css
+++ b/src/s2-homeworks/hw05/header/Header.module.css
@@ -1,8 +1,23 @@
 .burgerMenuIcon {
+    cursor: pointer;
+    width: 24px;
+    height: 24px;
 }
 
 .header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    height: 60px;
+    box-shadow: 0 0 2px 0 rgba(29, 33, 38, 0.1), 0 0 40px 0 rgba(29, 33, 38, 0.13);
+    background-color: #fff;
+    padding: 0 100px 0 30px;
 }
 
 .header h1 {
+    font-family: Montserat, sans-serif;
+    font-weight: 600;
+    font-size: 24px;
+    color: #000;
 }
