--- a/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
+++ b/src/s2-homeworks/hw06/common/c4-SuperEditableSpan/SuperEditableSpan.module.css
@@ -1,11 +1,20 @@
 .spanBlock {
+    display: flex;
+    align-items: center;
+    gap: 10px;
 }
 
 .span {
+    font-weight: 500;
+    font-size: 16px;
+    color: #0080ff;
+    text-transform: capitalize;
 }
 
 .input {
 }
 
 .pen {
+    width: 24px;
+    height: 24px;
 }
