--- a/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
+++ b/src/s2-homeworks/hw07/common/c5-SuperSelect/SuperSelect.module.css
@@ -1,4 +1,8 @@
 .select {
+    border: 1px solid #c2c2c2;
+    border-radius: 2px;
+    width: 165px;
+    height: 24px;
 }
 
 .select:focus {
@@ -6,4 +10,5 @@
 
 
 .option:hover {
+    background: #1e90ff;
 }
