--- a/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
+++ b/src/s2-homeworks/hw07/common/c6-SuperRadio/SuperRadio.module.css
@@ -1,4 +1,6 @@
 .radio {
+    width: 20px;
+    height: 20px;
 }
 
 .radio::before {
@@ -9,7 +11,12 @@
 }
 
 .label {
+    display: flex;
+    gap: 10px;
 }
 
 .options {
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
 }
